--- a/pizzeria-model/pom.xml
+++ b/pizzeria-model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>fr.pizzeria</groupId>
         <artifactId>pizzeria-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
         <relativePath>../</relativePath>
     </parent>
         <dependencies>
