--- a/pizzeria-dao/pom.xml
+++ b/pizzeria-dao/pom.xml
@@ -10,18 +10,24 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-<dependencies>
-	<dependency>
+	<dependencies>
+		<dependency>
 			<groupId>fr.pizzeria</groupId>
 			<artifactId>pizzeria-modele</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.stefanbirkner</groupId>
 			<artifactId>system-rules</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
