--- a/pizzeria-dao/pom.xml
+++ b/pizzeria-dao/pom.xml
@@ -28,6 +28,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+		</dependency>
 
 	</dependencies>
 </project>
