--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
 				<version>5.1.0.Final</version>
+				<scope>runtime</scope>
 			</dependency>
 
 		</dependencies>
