--- a/pizzeria-admin-app/pom.xml
+++ b/pizzeria-admin-app/pom.xml
@@ -20,6 +20,11 @@
 			<groupId>fr.pizzeria</groupId>
 			<artifactId>pizzeria-dao</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>pizzeria-admin-app</finalName>
