--- a/pizzeria-admin-app/src/main/webapp/WEB-INF/web.xml
+++ b/pizzeria-admin-app/src/main/webapp/WEB-INF/web.xml
@@ -3,39 +3,66 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
 
+<!--   <display-name>Archetype Created Web Application</display-name> -->
+<!-- <description>autre</description> -->
+<!-- <filter> -->
+<!-- 	<filter-name>Filter</filter-name> -->
+<!-- 	<display-name>Filter</display-name> -->
+<!-- 	<description></description> -->
+<!-- 	<filter-class>fr.pizzeria.admin.web.Filter</filter-class> -->
+<!-- </filter> -->
+<!-- <filter-mapping> -->
+<!-- 	<filter-name>Filter</filter-name> -->
+<!-- 	<url-pattern>/*</url-pattern> -->
+<!-- </filter-mapping> -->
 
-<servlet>
-<servlet-name>HelloServlet</servlet-name>
-<servlet-class>fr.pizzeria.admin.web.HelloServlet</servlet-class> 
-</servlet>
+<!-- <servlet> -->
+<!-- <servlet-name>HelloServlet</servlet-name> -->
+<!-- <servlet-class>fr.pizzeria.admin.web.HelloServlet</servlet-class>  -->
+<!-- </servlet> -->
 
-<servlet>
-<servlet-name>ServletPizza</servlet-name>
-<servlet-class>fr.pizzeria.admin.web.ServletListePizza</servlet-class> 
-</servlet>
+<!-- <servlet> -->
+<!-- <servlet-name>ServletPizza</servlet-name> -->
+<!-- <servlet-class>fr.pizzeria.admin.web.ServletListePizza</servlet-class>  -->
+<!-- </servlet> -->
+<!-- <servlet> -->
+<!-- <servlet-name>EditerPizzaController</servlet-name> -->
+<!-- <servlet-class>fr.pizzeria.admin.web.EditerPizzaController</servlet-class>  -->
+<!-- </servlet> -->
+<!-- <servlet> -->
+<!-- <servlet-name>ListerPizzaController</servlet-name> -->
+<!-- <servlet-class>fr.pizzeria.admin.web.ListerPizzaController</servlet-class> -->
+<!-- </servlet> -->
+<!-- <servlet> -->
+<!-- 	<servlet-name>LoginController</servlet-name> -->
+<!-- 	<display-name>LoginController</display-name> -->
+<!-- 	<description></description> -->
+<!-- 	<servlet-class>fr.pizzeria.admin.web.LoginController</servlet-class> -->
+<!-- </servlet> -->
+<!-- <servlet-mapping> -->
+<!--     <servlet-name>ServletPizza</servlet-name> -->
+<!--     <url-pattern>/api/servlet/pizzas</url-pattern> -->
+<!-- </servlet-mapping> -->
+<!-- <servlet-mapping> -->
+<!--     <servlet-name>HelloServlet</servlet-name> -->
+<!--     <url-pattern>/hello</url-pattern> -->
+<!-- </servlet-mapping> -->
 
-<servlet>
-<servlet-name>ListerPizzaController</servlet-name>
-<servlet-class>fr.pizzeria.admin.web.ListerPizzaController</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>ServletPizza</servlet-name>
-    <url-pattern>/api/servlet/pizzas</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
-    <servlet-name>HelloServlet</servlet-name>
-    <url-pattern>/hello</url-pattern>
-</servlet-mapping>
+<!-- <servlet-mapping> -->
+<!--     <servlet-name>ListerPizzaController</servlet-name> -->
+<!--     <url-pattern>/pizzas/list</url-pattern> -->
+<!-- </servlet-mapping> -->
 
-<servlet-mapping>
-    <servlet-name>ListerPizzaController</servlet-name>
-    <url-pattern>/pizzas/list</url-pattern>
-</servlet-mapping>
-
-<servlet-mapping>
-    <servlet-name>EditerPizzaController</servlet-name>
-    <url-pattern>/pizzas/edit</url-pattern>
-</servlet-mapping>
+<!-- <servlet-mapping> -->
+<!--     <servlet-name>EditerPizzaController</servlet-name> -->
+<!--     <url-pattern>/pizzas/edit</url-pattern> -->
+<!-- </servlet-mapping> -->
+<!-- <servlet-mapping> -->
+<!-- 	<servlet-name>LoginController</servlet-name> -->
+<!-- 	<url-pattern>/login</url-pattern> -->
+<!-- </servlet-mapping> -->
+<!-- <welcome-file-list> -->
+<!-- <welcome-file>/WEB-INF/views/pizzas/authentification.jsp</welcome-file> -->
+<!-- </welcome-file-list> -->
 </web-app>
