--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 				<version>3.1.0</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>jstl</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
+				<scope>provided</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
