--- a/pizzeria-dao/pom.xml
+++ b/pizzeria-dao/pom.xml
@@ -32,6 +32,12 @@
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+
+		</dependency>
+
 
 	</dependencies>
 </project>
