--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 				<version>1.2</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>javax.enterprise</groupId>
+				<artifactId>cdi-api</artifactId>
+				<version>1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
