commit du vendredi

--- a/pizzeria-admin-app/pom.xml
+++ b/pizzeria-admin-app/pom.xml
@@ -24,6 +24,16 @@
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.spec.javax.ws.rs</groupId>
+			<artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+<dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+
+        </dependency>
 
 	</dependencies>
 	<build>
