--- a/pizzeria-dao/pom.xml
+++ b/pizzeria-dao/pom.xml
@@ -33,8 +33,8 @@
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
 
 		</dependency>
 
