--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,14 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
-				<groupId>javax.enterprise</groupId>
-				<artifactId>cdi-api</artifactId>
-				<version>1.2</version>
+				<groupId>javax</groupId>
+				<artifactId>javaee-api</artifactId>
+				<version>7.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.spec.javax.ws.rs</groupId>
+				<artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
+				<version>1.0.0.Final</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
