--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@
 				<artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
 				<version>1.0.0.Final</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>4.2.6.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			     <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.10.1.RELEASE</version>
+        </dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
