--- a/MVC/pizzeria-spring-web/pom.xml
+++ b/MVC/pizzeria-spring-web/pom.xml
@@ -1,16 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>pizzeria-dao</artifactId>
-
+	<artifactId>pizzeria-spring-web</artifactId>
 	<parent>
 		<groupId>fr.pizzeria</groupId>
 		<artifactId>pizzeria-parent</artifactId>
 		<version>0.0.1</version>
 		<relativePath>../</relativePath>
 	</parent>
-
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>pizzeria-spring-web Maven Webapp</name>
+	<url>http://maven.apache.org</url>
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>fr.pizzeria</groupId>
 			<artifactId>pizzeria-modele</artifactId>
@@ -73,10 +81,17 @@
 			<artifactId>spring-aspects</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		
+
 
 	</dependencies>
+	<build>
+		<finalName>pizzeria-spring-web</finalName>
+	</build>
 </project>
