--- a/MVC/pizzeria-spring-web/pom.xml
+++ b/MVC/pizzeria-spring-web/pom.xml
@@ -9,7 +9,6 @@
 		<relativePath>../</relativePath>
 	</parent>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>pizzeria-spring-web Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -21,8 +20,9 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.pizzeria</groupId>
-			<artifactId>pizzeria-modele</artifactId>
+			<artifactId>pizzeria-dao</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.github.stefanbirkner</groupId>
 			<artifactId>system-rules</artifactId>
@@ -88,7 +88,18 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-
+            <dependency>
+                <groupId>jstl</groupId>
+                <artifactId>jstl</artifactId>
+            </dependency>
+                        <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+            </dependency>
 
 	</dependencies>
 	<build>
