--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,18 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.7.4</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>4.1.0.RELEASE</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>4.1.0.RELEASE</version>
+			</dependency>
+
 
 		</dependencies>
 	</dependencyManagement>
